# ObjectTracking

./: MeanShift.py  README.md  main.py  references.txt
Project1/Project1/src/: Log.cpp  Main.cpp
Test scripts/asms-master/: CMakeLists.txt  main_demo.cpp  main_vot.cpp  vot.hpp
Test scripts/asms-master/src/: colotracker.h  region.cpp
cpp_scripts/: CMakeCache.txt  CMakeLists.txt  CamShift.cpp  CamShiftImp.cpp  CamShiftImp.h  Main  Main.cpp  Makefile  MeanShift.cpp  MeanShift.h  MeanShiftImp.cpp  MeanShiftImp.h  cmake_install.cmake  colotracker.cpp  colotracker.h  new.cpp  region.h
data/ants/: groundtruth.txt
data/hand/: groundtruth.txt
py_scripts/: MeanShift.py  main.py
